--- a/monitoreo.html
+++ b/monitoreo.html
@@ -32,6 +32,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#dispositivos">Dispositivos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html" target="_blank">
+                            <i class="fa-solid fa-display"></i> Inicio
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
